@@ -7,10 +7,10 @@ import java.awt.geom.Point2D;
 
 import edu.colorado.phet.common.phetcommon.application.PhetApplication;
 import edu.colorado.phet.common.phetcommon.math.MathUtil;
+import edu.colorado.phet.common.phetcommon.math.Vector2D;
 import edu.colorado.phet.common.phetcommon.model.ModelElement;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.faraday.FaradayConstants;
-import edu.colorado.phet.faraday.util.Vector2D;
 
 
 /**
