@@ -1,3 +1,4 @@
+8/24/10 #2467, switch to phetcommon Vector2D, delete local implementation
 8/3/10 #2236, set GeneratorModule.CALIBRATION_EMF=26000
 # 2.03.07 (42549) Jul 21, 2010
 7/21/10 dev version to demonstrate recalibration
